# copy_gitlab

./: CMakeLists.txt  Makefile  README.md  controller.h  main.cc  mainwindow.cc  mainwindow.h  modelviewer.cc  modelviewer.h  parser.cc  parser.h
gif/: CMakeLists.txt
gif/build_3rdParty/: Makefile  cmake_install.cmake
gif/gifimage/: CMakeLists.txt  Makefile  cmake_install.cmake  qgifimage.cpp
src/: model.cc  settings.ini
test/: CMakeLists.txt  test.cc
